syntax = "proto3";

package exampke.enumeration;

option go_package = "github.com/an1l4/go-with-protobuf/proto";

enum EyeColor {
    EYE_COLOR_UNSPECIFIED = 0;
    EYE_COLOR_GREEN = 1;
    EYE_COLOR_BLUE = 2;
    EYE_COLOR_BROWN = 3;
    
}

message Enumeration {
    EyeColor eye_color = 1;
}