syntax = "proto3";

package example.simple;

option go_package = "github.com/an1l4/go-with-protobuf/proto";

message Simple {
    uint32 id = 1;
    bool is_simple = 2;
    string name = 3;
    repeated int32 sample_lists = 4;
}